Two failing tests: shouldNotCountCreatorSharesForAffiliationsWithoutId() and shouldCountOneCreatorShareForCreatorsWithOnlyAffiliationsWithoutId()